@@ -14,34 +14,36 @@ import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class JWTUtils {
 
+    private JWTUtils() {
+    }
+
     private static final Logger LOGGER = LoggerFactory.getLogger(JWTUtils.class);
 
-    private static final String AUTHORIZATION = "Authorization";
     private static final String BEARER = "Bearer ";
-    private static final String PREFERRED_USERNAME = "preferred_username";
     private static final String REALM_ACCESS = "realm_access";
+    private static final String AUTHORIZATION = "Authorization";
+    private static final String PREFERRED_USERNAME = "preferred_username";
 
     public static String getUsername() {
         try {
             HttpServletRequest request = ((ServletRequestAttributes) Objects.requireNonNull(RequestContextHolder.getRequestAttributes())).getRequest();
-            var authorization = request.getHeader(AUTHORIZATION);
-            var token = StringUtils.isNotNullOrEmpty(authorization) ? authorization.replace(BEARER, "") : "";
-            var decodedJWT = JWT.decode(token);
+            String authorization = request.getHeader(AUTHORIZATION);
+            String token = StringUtils.isNotNullOrEmpty(authorization) ? authorization.replace(BEARER, StringUtils.EMPTY) : StringUtils.EMPTY;
+            DecodedJWT decodedJWT = JWT.decode(token);
             return decodedJWT.getClaim(PREFERRED_USERNAME).asString();
         } catch (Exception e) {
-            return "";
+            return StringUtils.EMPTY;
         }
     }
 
     public static List<String> getRoles(String tokenCurrent) {
         try {
-            String token = tokenCurrent.startsWith(BEARER) ? tokenCurrent.replace(BEARER, "") : tokenCurrent;
+            String token = tokenCurrent.startsWith(BEARER) ? tokenCurrent.replace(BEARER, StringUtils.EMPTY) : tokenCurrent;
             DecodedJWT decodedJWT = JWT.decode(token);
-            return decodedJWT.getClaim(REALM_ACCESS).as(RolesUserResponse.class).getRoles().stream().filter(role -> role.startsWith("ROLE")).collect(Collectors.toList());
+            return decodedJWT.getClaim(REALM_ACCESS).as(RolesUserResponse.class).getRoles().stream().filter(role -> role.startsWith("ROLE")).toList();
         } catch (Exception e) {
             return Collections.emptyList();
         }
@@ -53,18 +55,18 @@ public class JWTUtils {
             if (servletRequestAttributes != null) {
                 HttpServletRequest request = servletRequestAttributes.getRequest();
                 String authorization = request.getHeader(AUTHORIZATION);
-                return StringUtils.isNotNullOrEmpty(authorization) ? authorization.replace(BEARER, "") : "";
+                return StringUtils.isNotNullOrEmpty(authorization) ? authorization.replace(BEARER, StringUtils.EMPTY) : StringUtils.EMPTY;
             }
         } catch (Exception e) {
             LOGGER.error("[SECURE] Get Current Token Exception: {}", e.getMessage());
             throw new AuthenticationException();
         }
-        return "";
+        return StringUtils.EMPTY;
     }
 
     public static Date getExpiredTime(String tokenCurrent) {
         try {
-            String token = tokenCurrent.startsWith(BEARER) ? tokenCurrent.replace(BEARER, "") : tokenCurrent;
+            String token = tokenCurrent.startsWith(BEARER) ? tokenCurrent.replace(BEARER, StringUtils.EMPTY) : tokenCurrent;
             DecodedJWT decodedJWT = JWT.decode(token);
             return decodedJWT.getClaim("exp").asDate();
         } catch (Exception e) {
